src/main/java/com/example/demobooks/error/UserNotFoundException.java
package com.example.demobooks.error;

public class UserNotFoundException extends Exception {
    public UserNotFoundException(String message) {
        super(message);
    }
}
